API Upload Excel

--- a/AplikasiUploadExcel.Api/appsettings.Development.json
+++ b/AplikasiUploadExcel.Api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DB_Conn": "Server=127.0.0.1,1412;Database=karyawan-baru;User=SA;Password=Pass@word;TrustServerCertificate=True"
   }
 }
