--- a/AplikasiUploadExcel.Api/AplikasiUploadExcel.Api.csproj
+++ b/AplikasiUploadExcel.Api/AplikasiUploadExcel.Api.csproj
@@ -19,12 +19,7 @@
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	  </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Services\" />
-    <Folder Include="ViewModel\" />
-    <Folder Include="Repositories\" />
+	  <PackageReference Include="NPOI" Version="2.6.2" />
   </ItemGroup>
 
 </Project>
