upload data cc ke db

--- a/AplikasiUploadExcel.Api/appsettings.Development.json
+++ b/AplikasiUploadExcel.Api/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DB_Conn": "Server=127.0.0.1,1412;Database=karyawan-baru;User=SA;Password=Pass@word;TrustServerCertificate=True"
+    "DB_Conn": "Data Source=DESKTOP-FMPMH41;Integrated Security=SSPI;Initial Catalog=ChangeControlPlant_stg;Encrypt=false;TrustServerCertificate=true;"
   }
 }
